--- a/assets/sass/_index.scss
+++ b/assets/sass/_index.scss
@@ -21,7 +21,7 @@
   font-family: var(--main-font);
 }
 html {
-  background-image: url(/assets/images/bg1.jpg);
+ // background-image: url(/assets/images/bg1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -719,20 +719,25 @@ body {
 
     .footer-logo {
       height: 16vh;
-
+      position: relative;
       display: flex;
+      top: -30px;
 
       flex-direction: column;
       align-items: flex-end;
       justify-content: flex-start;
       img {
-        width: 300px;
+        width: 250px;
+        // position: relative;
+        // top: -30px;
       }
       p {
         color: white;
         position: relative;
         top: -20px;
-        left: -75px;
+        
+        right: 90px;
+       
       }
     }
     .link {
@@ -949,11 +954,15 @@ body {
     }
 
     .footer-logo {
-      img {
         position: relative;
-        left: -120px;
-        top: 30px;
-        width: 200px;
+        
+      img {
+        
+        width: 200px !important;
+        position: absolute;
+        left: -35px;
+        bottom: -20px;
+        
       }
       p {
         display: none;
@@ -965,6 +974,8 @@ body {
       margin-bottom: -1rem;
       z-index: 200;
       box-shadow: 0px 0px 8px 0px rgb(83, 62, 62);
+      position: relative;
+      top: 30px;
     }
 
     h2 {
