--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -731,8 +731,8 @@ body {
     display: none;
   }
   .sidebar {
-    width: 100vw;
-    left: 100%;
+    width: 0;
+    left: 120%;
   }
   .sidebar #close-btn {
     position: absolute;
@@ -743,6 +743,7 @@ body {
   }
   .sidebar.active {
     left: 0;
+    width: 100vw;
   }
   .home {
     padding: 0;
