--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -731,8 +731,9 @@ body {
     display: none;
   }
   .sidebar {
-    width: 0;
-    left: 120%;
+    width: 100vw;
+    left: 100%;
+    display: none;
   }
   .sidebar #close-btn {
     position: absolute;
@@ -742,8 +743,8 @@ body {
     margin-top: 3rem;
   }
   .sidebar.active {
+    display: inline-block;
     left: 0;
-    width: 100vw;
   }
   .home {
     padding: 0;
