--- a/assets/sass/_index.scss
+++ b/assets/sass/_index.scss
@@ -768,8 +768,9 @@ body {
     display: none;
   }
   .sidebar {
-    width: 0;
-    left: 120%;
+    width: 100vw;
+    left: 100%;
+    display: none;
     
 
     #close-btn {
@@ -781,8 +782,9 @@ body {
     }
     // active
     &.active {
+      display: inline-block;
       left: 0;
-      width: 100vw;
+      //width: 100vw;
       
     }
   }
