--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,6 +84,12 @@
   max-width: 100vw;
   text-decoration: none;
   font-family: var(--main-font);
+  transition: all 0.3s ease-in-out;
+}
+* a:hover, * input[type=email]:hover {
+  position: relative;
+  transform: scale(1.05);
+  top: -2px;
 }
 
 html {
@@ -178,9 +184,12 @@ body {
   padding: 2rem;
   font-size: 2rem;
   background-color: var(--main-color);
-  color: white;
   border-radius: 0.5rem;
   margin-bottom: 2rem;
+}
+.sidebar button[type=button] a {
+  font-family: var(--special-font);
+  color: white;
 }
 .sidebar .logo {
   display: flex;
