--- a/assets/sass/_index.scss
+++ b/assets/sass/_index.scss
@@ -19,6 +19,13 @@
   max-width: 100vw;
   text-decoration: none;
   font-family: var(--main-font);
+  transition: all 0.3s ease-in-out;
+  a:hover,input[type="email"]:hover{
+    position: relative;
+    transform: scale(1.05);
+    top: -2px;
+
+  }
 }
 html {
  // background-image: url(/assets/images/bg1.jpg);
@@ -132,9 +139,13 @@ body {
       padding: 2rem;
       font-size: 2rem;
       background-color: var(--main-color);
-      color: white;
+      
       border-radius: 0.5rem;
       margin-bottom: 2rem;
+      a{
+        font-family: var(--special-font);
+        color: white;
+      }
     }
   }
 
